--- a/virtualKeyboard.css
+++ b/virtualKeyboard.css
@@ -3,7 +3,7 @@
   --font-color: rgb(212, 206, 198);
 }
 
-#keyboard-container-vk * {
+#full-keyboard-container-fk *, #numeric-keyboard-container-nk * {
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -12,25 +12,27 @@
   box-sizing: border-box;
 }
 
-#keyboard-container-vk {
+#full-keyboard-container-fk {
   position: absolute;
   bottom: 1rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  row-gap: 3px;
-  flex-wrap: wrap;
   left: 50%;
   right: 50%;
   transform: translate(-50%, 0);
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 3px;
   border: 1px solid black;
   background-color: black;
+  min-width: 600px;
   width: 850px;
+  max-width: 70%;
   padding: 3px;
   padding-top: 2rem;
   z-index: 2147483647;
+  display: none;
 }
 
-.keyboard-row-vk {
+.keyboard-row-fk {
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -40,7 +42,7 @@
   gap: 3px;
 }
 
-.keys-vk {
+.keys-fk {
   position: relative;
   background-color: var(--keys-color);
   font-size: 1.2rem;
@@ -53,53 +55,55 @@
   color: var(--font-color);
 }
 
-.keys-vk:hover {
+.keys-fk:hover,
+.keys-nk:hover {
   background-color: #4f4f4f;
   cursor: pointer;
 }
 
-.keys-vk:active {
+.keys-fk:active,
+.keys-nk:active {
   background-color: royalblue;
 }
 
-.key-pressed-color-vk {
+.key-pressed-color-fk {
   background-color: royalblue
 }
 
-#first-row-vk,
-#second-row-vk,
-#third-row-vk,
-#fourth-row-vk {
+#first-row-fk,
+#second-row-fk,
+#third-row-fk,
+#fourth-row-fk {
   display: grid;
 }
 
-#first-row-vk {
-  grid-template-columns: repeat(13, 50px) 2fr;
+#first-row-fk {
+  grid-template-columns: repeat(13, 6%) 1fr;
 }
 
-#second-row-vk {
-  grid-template-columns: 2fr repeat(13, 50px) 2fr;
+#second-row-fk {
+  grid-template-columns: 1fr repeat(13, 6%) 1fr;
 }
 
-#third-row-vk {
-  grid-template-columns: 2fr repeat(11, 50px) 2fr;
+#third-row-fk {
+  grid-template-columns: 1fr repeat(11, 6%) 1fr;
 }
 
-#fourth-row-vk {
-  grid-template-columns: 2fr repeat(10, 50px) 2fr;
+#fourth-row-fk {
+  grid-template-columns: 1fr repeat(10, 6%) 1fr;
 }
 
-#fifth-row-vk {
+#fifth-row-fk {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#fifth-row-vk>* {
+#fifth-row-fk>* {
   width: 100%;
 }
 
-.secondary-key-vk {
+.secondary-key-fk {
   position: absolute;
   top: 0.2rem;
   left: 0.4rem;
@@ -113,4 +117,48 @@ input:focus {
 
 textarea:focus {
   outline: 0;
+}
+
+#numeric-keyboard-container-nk {
+  position: absolute;
+  bottom: 1rem;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, 0);
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  padding-top: 2rem;
+  width: 310px;
+  display: none;
+}
+
+#numeric-keyboard-nk {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 5px;
+  width: 100%;
+}
+
+.keyboard-row-nk {
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  background-color: black;
+  gap: 5px;
+}
+
+.keys-nk {
+  background-color: var(--keys-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  color: var(--font-color);
+}
+
+.keyboard-row-nk:last-child {
+  display: grid;
+  grid-template-columns: 100px 1fr;
 }
